--- a/ly-registry/src/main/resources/application.yml
+++ b/ly-registry/src/main/resources/application.yml
@@ -7,3 +7,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:10086/eureka
+    register-with-eureka: false #是否将自己注册到eureka上
+    fetch-registry: false #是否拉取
