--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,15 @@
     <modules>
         <module>ly-registry</module>
         <module>ly-gateway</module>
+        <module>ly-item</module>
+        <module>ly-common</module>
     </modules>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.0.4.RELEASE</version>
         <relativePath/><!--relativePath设置空值将始终从仓库中获取，不从本地路径获取-->
     </parent>
 
@@ -27,7 +29,7 @@
         <spring-cloud.version>Finchley.SR1</spring-cloud.version>
         <mapper.starter.version>2.0.3</mapper.starter.version>
         <mysql.version>5.1.32</mysql.version>
-        <pageHelper.starter.version>1.0.0-SNAPSHOT</pageHelper.starter.version>
+        <pageHelper.starter.version>1.2.5</pageHelper.starter.version>
         <leyou.latest.version>1.0.0-SNAPSHOT</leyou.latest.version>
         <fastDFS.client.version>1.26.1-RELEASE</fastDFS.client.version>
     </properties>
@@ -56,7 +58,7 @@
             <!--mysql驱动-->
             <dependency>
                 <groupId>mysql</groupId>
-                <artifactId>mysql-connection-java</artifactId>
+                <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
             <!--FastDFS客户端-->
